// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tokenizer - Variable Assignments should tokenize var assignment 1`] = `
[
  {
    "position": {
      "end": {
        "column": 4,
        "line": 1,
      },
      "start": {
        "column": 1,
        "line": 1,
      },
    },
    "type": "LET",
    "value": "var",
  },
  {
    "position": {
      "end": {
        "column": 6,
        "line": 1,
      },
      "start": {
        "column": 5,
        "line": 1,
      },
    },
    "type": "IDENTIFIER",
    "value": "a",
  },
  {
    "position": {
      "end": {
        "column": 7,
        "line": 1,
      },
      "start": {
        "column": 6,
        "line": 1,
      },
    },
    "type": "COLON",
    "value": ":",
  },
  {
    "position": {
      "end": {
        "column": 15,
        "line": 1,
      },
      "start": {
        "column": 8,
        "line": 1,
      },
    },
    "type": "DYNAMIC_TYPE",
    "value": "dynamic",
  },
  {
    "position": {
      "end": {
        "column": 17,
        "line": 1,
      },
      "start": {
        "column": 16,
        "line": 1,
      },
    },
    "type": "ASSIGNMENT_OPERATOR",
    "value": "=",
  },
  {
    "position": {
      "end": {
        "column": 20,
        "line": 1,
      },
      "start": {
        "column": 18,
        "line": 1,
      },
    },
    "type": "NUMBER_LITERAL",
    "value": "10",
  },
  {
    "position": {
      "end": {
        "column": 6,
        "line": 2,
      },
      "start": {
        "column": 5,
        "line": 2,
      },
    },
    "type": "IDENTIFIER",
    "value": "a",
  },
  {
    "position": {
      "end": {
        "column": 8,
        "line": 2,
      },
      "start": {
        "column": 7,
        "line": 2,
      },
    },
    "type": "ASSIGNMENT_OPERATOR",
    "value": "=",
  },
  {
    "position": {
      "end": {
        "column": 11,
        "line": 2,
      },
      "start": {
        "column": 9,
        "line": 2,
      },
    },
    "type": "NUMBER_LITERAL",
    "value": "20",
  },
  {
    "position": {
      "end": {
        "column": -1,
        "line": 2,
      },
      "start": {
        "column": -1,
        "line": 2,
      },
    },
    "type": "END_OF_FILE",
    "value": "EOF",
  },
]
`;

exports[`Tokenizer - Variable Declarations should tokenize const declaration 1`] = `
[
  {
    "position": {
      "end": {
        "column": 6,
        "line": 1,
      },
      "start": {
        "column": 1,
        "line": 1,
      },
    },
    "type": "CONST",
    "value": "const",
  },
  {
    "position": {
      "end": {
        "column": 7,
        "line": 1,
      },
      "start": {
        "column": 6,
        "line": 1,
      },
    },
    "type": "WHITE_SPACE",
    "value": " ",
  },
  {
    "position": {
      "end": {
        "column": 8,
        "line": 1,
      },
      "start": {
        "column": 7,
        "line": 1,
      },
    },
    "type": "IDENTIFIER",
    "value": "y",
  },
  {
    "position": {
      "end": {
        "column": 9,
        "line": 1,
      },
      "start": {
        "column": 8,
        "line": 1,
      },
    },
    "type": "WHITE_SPACE",
    "value": " ",
  },
  {
    "position": {
      "end": {
        "column": 10,
        "line": 1,
      },
      "start": {
        "column": 9,
        "line": 1,
      },
    },
    "type": "ASSIGNMENT_OPERATOR",
    "value": "=",
  },
  {
    "position": {
      "end": {
        "column": 11,
        "line": 1,
      },
      "start": {
        "column": 10,
        "line": 1,
      },
    },
    "type": "WHITE_SPACE",
    "value": " ",
  },
  {
    "position": {
      "end": {
        "column": 13,
        "line": 1,
      },
      "start": {
        "column": 11,
        "line": 1,
      },
    },
    "type": "NUMBER_LITERAL",
    "value": "20",
  },
  {
    "position": {
      "end": {
        "column": -1,
        "line": 1,
      },
      "start": {
        "column": -1,
        "line": 1,
      },
    },
    "type": "END_OF_FILE",
    "value": "EOF",
  },
]
`;

exports[`Tokenizer - Variable Declarations should tokenize final declaration 1`] = `
[
  {
    "position": {
      "end": {
        "column": 6,
        "line": 1,
      },
      "start": {
        "column": 1,
        "line": 1,
      },
    },
    "type": "FINAL",
    "value": "final",
  },
  {
    "position": {
      "end": {
        "column": 7,
        "line": 1,
      },
      "start": {
        "column": 6,
        "line": 1,
      },
    },
    "type": "WHITE_SPACE",
    "value": " ",
  },
  {
    "position": {
      "end": {
        "column": 8,
        "line": 1,
      },
      "start": {
        "column": 7,
        "line": 1,
      },
    },
    "type": "IDENTIFIER",
    "value": "z",
  },
  {
    "position": {
      "end": {
        "column": 9,
        "line": 1,
      },
      "start": {
        "column": 8,
        "line": 1,
      },
    },
    "type": "WHITE_SPACE",
    "value": " ",
  },
  {
    "position": {
      "end": {
        "column": 10,
        "line": 1,
      },
      "start": {
        "column": 9,
        "line": 1,
      },
    },
    "type": "ASSIGNMENT_OPERATOR",
    "value": "=",
  },
  {
    "position": {
      "end": {
        "column": 11,
        "line": 1,
      },
      "start": {
        "column": 10,
        "line": 1,
      },
    },
    "type": "WHITE_SPACE",
    "value": " ",
  },
  {
    "position": {
      "end": {
        "column": 13,
        "line": 1,
      },
      "start": {
        "column": 11,
        "line": 1,
      },
    },
    "type": "NUMBER_LITERAL",
    "value": "30",
  },
  {
    "position": {
      "end": {
        "column": -1,
        "line": 1,
      },
      "start": {
        "column": -1,
        "line": 1,
      },
    },
    "type": "END_OF_FILE",
    "value": "EOF",
  },
]
`;

exports[`Tokenizer - Variable Declarations should tokenize multiple var declarations 1`] = `
[
  {
    "position": {
      "end": {
        "column": 4,
        "line": 1,
      },
      "start": {
        "column": 1,
        "line": 1,
      },
    },
    "type": "LET",
    "value": "var",
  },
  {
    "position": {
      "end": {
        "column": 5,
        "line": 1,
      },
      "start": {
        "column": 4,
        "line": 1,
      },
    },
    "type": "WHITE_SPACE",
    "value": " ",
  },
  {
    "position": {
      "end": {
        "column": 6,
        "line": 1,
      },
      "start": {
        "column": 5,
        "line": 1,
      },
    },
    "type": "IDENTIFIER",
    "value": "a",
  },
  {
    "position": {
      "end": {
        "column": 7,
        "line": 1,
      },
      "start": {
        "column": 6,
        "line": 1,
      },
    },
    "type": "WHITE_SPACE",
    "value": " ",
  },
  {
    "position": {
      "end": {
        "column": 8,
        "line": 1,
      },
      "start": {
        "column": 7,
        "line": 1,
      },
    },
    "type": "ASSIGNMENT_OPERATOR",
    "value": "=",
  },
  {
    "position": {
      "end": {
        "column": 9,
        "line": 1,
      },
      "start": {
        "column": 8,
        "line": 1,
      },
    },
    "type": "WHITE_SPACE",
    "value": " ",
  },
  {
    "position": {
      "end": {
        "column": 10,
        "line": 1,
      },
      "start": {
        "column": 9,
        "line": 1,
      },
    },
    "type": "NUMBER_LITERAL",
    "value": "1",
  },
  {
    "position": {
      "end": {
        "column": 11,
        "line": 1,
      },
      "start": {
        "column": 10,
        "line": 1,
      },
    },
    "type": "COMMA",
    "value": ",",
  },
  {
    "position": {
      "end": {
        "column": 12,
        "line": 1,
      },
      "start": {
        "column": 11,
        "line": 1,
      },
    },
    "type": "WHITE_SPACE",
    "value": " ",
  },
  {
    "position": {
      "end": {
        "column": 13,
        "line": 1,
      },
      "start": {
        "column": 12,
        "line": 1,
      },
    },
    "type": "IDENTIFIER",
    "value": "b",
  },
  {
    "position": {
      "end": {
        "column": 14,
        "line": 1,
      },
      "start": {
        "column": 13,
        "line": 1,
      },
    },
    "type": "WHITE_SPACE",
    "value": " ",
  },
  {
    "position": {
      "end": {
        "column": 15,
        "line": 1,
      },
      "start": {
        "column": 14,
        "line": 1,
      },
    },
    "type": "ASSIGNMENT_OPERATOR",
    "value": "=",
  },
  {
    "position": {
      "end": {
        "column": 16,
        "line": 1,
      },
      "start": {
        "column": 15,
        "line": 1,
      },
    },
    "type": "WHITE_SPACE",
    "value": " ",
  },
  {
    "position": {
      "end": {
        "column": 17,
        "line": 1,
      },
      "start": {
        "column": 16,
        "line": 1,
      },
    },
    "type": "NUMBER_LITERAL",
    "value": "2",
  },
  {
    "position": {
      "end": {
        "column": 18,
        "line": 1,
      },
      "start": {
        "column": 17,
        "line": 1,
      },
    },
    "type": "COMMA",
    "value": ",",
  },
  {
    "position": {
      "end": {
        "column": 19,
        "line": 1,
      },
      "start": {
        "column": 18,
        "line": 1,
      },
    },
    "type": "WHITE_SPACE",
    "value": " ",
  },
  {
    "position": {
      "end": {
        "column": 20,
        "line": 1,
      },
      "start": {
        "column": 19,
        "line": 1,
      },
    },
    "type": "IDENTIFIER",
    "value": "c",
  },
  {
    "position": {
      "end": {
        "column": 21,
        "line": 1,
      },
      "start": {
        "column": 20,
        "line": 1,
      },
    },
    "type": "WHITE_SPACE",
    "value": " ",
  },
  {
    "position": {
      "end": {
        "column": 22,
        "line": 1,
      },
      "start": {
        "column": 21,
        "line": 1,
      },
    },
    "type": "ASSIGNMENT_OPERATOR",
    "value": "=",
  },
  {
    "position": {
      "end": {
        "column": 23,
        "line": 1,
      },
      "start": {
        "column": 22,
        "line": 1,
      },
    },
    "type": "WHITE_SPACE",
    "value": " ",
  },
  {
    "position": {
      "end": {
        "column": 24,
        "line": 1,
      },
      "start": {
        "column": 23,
        "line": 1,
      },
    },
    "type": "NUMBER_LITERAL",
    "value": "3",
  },
  {
    "position": {
      "end": {
        "column": -1,
        "line": 1,
      },
      "start": {
        "column": -1,
        "line": 1,
      },
    },
    "type": "END_OF_FILE",
    "value": "EOF",
  },
]
`;

exports[`Tokenizer - Variable Declarations should tokenize var declaration 1`] = `
[
  {
    "position": {
      "end": {
        "column": 4,
        "line": 1,
      },
      "start": {
        "column": 1,
        "line": 1,
      },
    },
    "type": "LET",
    "value": "var",
  },
  {
    "position": {
      "end": {
        "column": 5,
        "line": 1,
      },
      "start": {
        "column": 4,
        "line": 1,
      },
    },
    "type": "WHITE_SPACE",
    "value": " ",
  },
  {
    "position": {
      "end": {
        "column": 6,
        "line": 1,
      },
      "start": {
        "column": 5,
        "line": 1,
      },
    },
    "type": "IDENTIFIER",
    "value": "x",
  },
  {
    "position": {
      "end": {
        "column": 7,
        "line": 1,
      },
      "start": {
        "column": 6,
        "line": 1,
      },
    },
    "type": "WHITE_SPACE",
    "value": " ",
  },
  {
    "position": {
      "end": {
        "column": 8,
        "line": 1,
      },
      "start": {
        "column": 7,
        "line": 1,
      },
    },
    "type": "ASSIGNMENT_OPERATOR",
    "value": "=",
  },
  {
    "position": {
      "end": {
        "column": 9,
        "line": 1,
      },
      "start": {
        "column": 8,
        "line": 1,
      },
    },
    "type": "WHITE_SPACE",
    "value": " ",
  },
  {
    "position": {
      "end": {
        "column": 11,
        "line": 1,
      },
      "start": {
        "column": 9,
        "line": 1,
      },
    },
    "type": "NUMBER_LITERAL",
    "value": "10",
  },
  {
    "position": {
      "end": {
        "column": -1,
        "line": 1,
      },
      "start": {
        "column": -1,
        "line": 1,
      },
    },
    "type": "END_OF_FILE",
    "value": "EOF",
  },
]
`;
